--- a/views/login.html
+++ b/views/login.html
@@ -1,12 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/login.css" />
+    <title>Welcome! - DEV Community</title>
+  </head>
+  <body>
+    <main>
+      <section class="d-flex justify-content-center vw-100">
+        <section
+          class="container my-md-3 col-12 col-md-10 col-lg-5 bg-white rounded shadow p-5"
+        >
+          <header class="text-center text-sm">
+            <h1 class="fw-semibold title-primary">Welcome to DEV Community</h1>
+            <p class="subtitle-primary">
+              DEV Community is a community of 1,108,653 amazing developers
+            </p>
+          </header>
+
+          <section class="d-flex flex-column flex-nowrap buttons-wrapper">
+            <div class="w-100">
+              <button class="w-100 btn-Apple text-white">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  role="img"
+                  aria-labelledby="aeydj7pp6da89ttq2isnjei4axzbqql7"
+                  aria-hidden="true"
+                  fill="currentColor"
+                >
+                  <title id="aeydj7pp6da89ttq2isnjei4axzbqql7">apple</title>
+                  <path
+                    d="M11.752 6.657c.828 0 1.867-.56 2.486-1.307.56-.677.969-1.623.969-2.568 0-.129-.012-.257-.036-.362-.922.035-2.03.618-2.696 1.4-.525.596-1.004 1.53-1.004 2.487 0 .14.024.28.035.326.059.012.152.024.245.024zM8.834 20.78c1.132 0 1.634-.759 3.046-.759 1.436 0 1.75.736 3.011.736 1.238 0 2.066-1.144 2.848-2.265.876-1.284 1.238-2.544 1.261-2.603-.082-.023-2.451-.992-2.451-3.711 0-2.358 1.867-3.42 1.972-3.502-1.237-1.774-3.116-1.82-3.63-1.82-1.389 0-2.52.84-3.233.84-.77 0-1.786-.794-2.988-.794-2.288 0-4.61 1.89-4.61 5.462 0 2.218.863 4.564 1.925 6.082.91 1.284 1.705 2.334 2.849 2.334z"
+                  ></path>
+                </svg>
+                Continue with Apple
+              </button>
+            </div>
+            <div class="w-100">
+              <button class="w-100 btn-Forem text-white">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  version="1.0"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 200.000000 200.000000"
+                  preserveAspectRatio="xMidYMid meet"
+                  role="img"
+                  aria-labelledby="a51kmasgm5e0zpvzxo767560ndod5548"
+                  aria-hidden="true"
+                  fill="currentColor"
+                >
+                  <title id="a51kmasgm5e0zpvzxo767560ndod5548">forem</title>
+                  <g
+                    transform="translate(0.000000,200.000000) scale(0.100000,-0.100000)"
+                    fill="currentColor"
+                    stroke="none"
+                  >
+                    <path
+                      d="M0 1000 l0 -1000 1000 0 1000 0 0 1000 0 1000 -1000 0 -1000 0 0 -1000z m1507 684 c91 -55 130 -189 84 -290 -22 -48 -95 -114 -128 -114 -19 0 -25 9 -39 57 l-17 57 26 20 c14 12 31 34 37 50 15 40 -14 98 -55 110 -52 15 -58 21 -72 70 -11 38 -12 51 -1 63 20 24 107 12 165 -23z m-247 -25 c6 -11 12 -39 13 -62 2 -41 2 -42 -45 -57 -68 -22 -70 -26 -52 -100 22 -88 28 -94 88 -76 26 8 54 12 61 10 15 -6 40 -97 32 -118 -3 -8 -31 -21 -61 -30 -31 -9 -56 -20 -56 -24 0 -4 18 -72 40 -152 22 -80 40 -153 40 -162 0 -21 -106 -56 -121 -41 -6 6 -25 68 -44 139 -43 167 -155 586 -160 600 -7 24 16 37 111 65 120 34 140 35 154 8z m-485 -185 c67 -33 136 -105 155 -163 16 -48 13 -53 -52 -74 l-48 -16 -17 26 c-10 15 -35 43 -55 64 -67 68 -175 71 -252 7 -48 -39 -67 -77 -71 -144 -1 -30 -5 -57 -7 -59 -10 -10 -97 -28 -110 -22 -38 14 -29 147 17 237 25 49 94 119 144 144 84 44 206 44 296 0z m791 -730 c12 -48 -2 -147 -30 -201 -37 -75 -76 -115 -148 -154 -58 -31 -70 -34 -148 -34 -73 0 -93 4 -143 29 -67 32 -128 92 -157 152 -25 51 -19 68 29 83 64 19 78 15 103 -30 33 -58 94 -92 168 -92 106 0 178 71 189 186 l6 61 40 12 c65 20 84 17 91 -12z"
+                    ></path>
+                  </g>
+                </svg>
+                Continue with Forem
+              </button>
+            </div>
+            <div class="w-100">
+              <button class="w-100 btn-GitHub text-white">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  role="img"
+                  aria-labelledby="a4uo9kgx58msx0xg1ukw7wp0txnqwcvj"
+                  aria-hidden="true"
+                  fill="white"
+                >
+                  <title id="a4uo9kgx58msx0xg1ukw7wp0txnqwcvj">github</title>
+                  <path
+                    d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 006.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.288-.6-1.175-1.025-1.413-.35-.187-.85-.65-.013-.662.788-.013 1.35.725 1.538 1.025.9 1.512 2.338 1.087 2.912.825.088-.65.35-1.087.638-1.337-2.225-.25-4.55-1.113-4.55-4.938 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.275.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 012.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0022 12c0-5.525-4.475-10-10-10z"
+                  ></path>
+                </svg>
+                Continue with GitHub
+              </button>
+            </div>
+            <div class="w-100">
+              <button class="w-100 btn-Twitter text-white">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-twitter"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
+                  />
+                </svg>
+                Continue with Twitter
+              </button>
+            </div>
+            <div>
+              <div class="d-flex justify-content-center mt-3">
+                <hr class="w-25" />
+                <span class="text-center fw-light text-sm">
+                  Have a password? Continue with your email address
+                </span>
+                <hr class="w-25" />
+              </div>
+
+              <form action="" class="">
+                <div id="loginForm">
+                  <div class="mb-3 container-email">
+                    <label for="" class="form-label">Email</label>
+                    <input type="email" class="input-email" name="email" />
+                  </div>
+                  <div class="mb-3 container-password">
+                    <label for="" class="form-label">Password</label>
+                    <input
+                      type="password"
+                      class="input-password"
+                      name="password"
+                    />
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <input type="checkbox" class="form-check-input" />
+                  <label for="" class="form-check-label">Remember Me</label>
+                </div>
+                <div class="button-login">
+                  <button
+                    type="button"
+                    class="btn-login-form rounded w-100 text-white p-2"
+                    id="btnLogin"
+                  >
+                    Continue
+                  </button>
+                </div>
+              </form>
+              <p class="text-center my-3">
+                <a href="" class="a-password-link text-decoration-none fw-light"
+                  >I forgot my password</a
+                >
+              </p>
+            </div>
+          </section>
+        </section>
+      </section>
+    </main>
+
+    <footer class="footer__container p-5 mt-4">
+      <div class="container text-center">
+        <p>
+          <a href="#">DEV Community</a> -- A constructive and inclusive social
+          network for software developers. With you every step of your journey.
+        </p>
+        <ul class="d-flex justify-content-center flex-wrap">
+          <li class="list-unstyled me-4">
+            <a class="text-decoration-none" href="">Home</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Listings</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Podcasts</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Videos</a>
+          </li>
+          <li class="me-4"><a class="text-decoration-none" href="">Tags</a></li>
+          <li class="me-4"><a class="text-decoration-none" href="">FAQ</a></li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Forem Shop</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Sponsors</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">About</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Contact</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Guides</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Software comparisons</a>
+          </li>
+        </ul>
+        <ul class="d-flex justify-content-center">
+          <li class="list-unstyled me-4">
+            <a class="text-decoration-none" href="">Code of Conduct</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">Privacy Policy</a>
+          </li>
+          <li class="me-4">
+            <a class="text-decoration-none" href="">terms of use</a>
+          </li>
+        </ul>
+        <p class="m-0">
+          Built on <a class="text-decoration-none" href="#">Forem</a> — the
+          <a class="text-decoration-none" href="#">open source</a> software that
+          powers <a href="#" class="text-decoration-none">DEV</a> and other
+          inclusive communities.
+        </p>
+        <p class="m-0">
+          Made with love and
+          <a href="#" class="text-decoration-none">Ruby on Rails</a>. DEV
+          Community © 2016 - 2023.
+        </p>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../js/login.js"></script>
+  </body>
 </html>
