Add header in post and login pages

--- a/views/login.html
+++ b/views/login.html
@@ -16,6 +16,168 @@
     <title>Welcome! - DEV Community</title>
   </head>
   <body>
+    <header id="header">
+      <div class="offcanvas offcanvas-sm d-block d-sm-none offcanvas-start w-85 overflow-y-scroll" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasExampleLabel">DEV Community</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body search__section">
+          <div id="offCanvasBody"></div>
+          <ul class="list-unstyled" id="listLinks">
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                        <img src="../assets/images/icons/home.png" alt="Home">
+                    </span>
+                    Home
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link  px-2 py-1">
+                    <span>
+                       <img src="../assets/images/icons/readingList.png" alt="Reading list">
+                    </span>
+                    Reading List
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                        <img src="../assets/images/icons/listings.png" alt="">
+                    </span>
+                    Listings
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                        <img src="../assets/images/icons/podcast.png" alt="">
+                    </span>
+                    Podcasts
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                        <img src="../assets/images/icons/videos.png" alt="">
+                    </span>
+                    Videos
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                       <img src="../assets/images/icons/tags.png" alt="">
+                    </span>
+                    Tags
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                        <img src="../assets/images/icons/FAQ.png" alt="">
+                    </span>
+                    FAQ
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="d-flex flex-row text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                      <img src="../assets/images/icons/foremShop.png" alt="">
+                      Forem Shop
+                    </span>
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                      <img src="../assets/images/icons/sponsors.png" alt="">
+                    </span>
+                    Sponsors
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                      <img src="../assets/images/icons/about.png" alt="">
+                    </span>
+                    About
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                      <img src="../assets/images/icons/contact.png" alt="">
+                    </span>
+                    Contact
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                  <img src="../assets/images/icons/guides.png" alt="">
+                    Guides
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-2">
+                    <span>
+                      <img src="../assets/images/icons/softwareComparisons.png" alt="">  
+                    </span>
+                    Software comparisons
+                </a>
+            </li>
+          </ul>
+          <h6 class="fw-bold text-start mt-4">Other</h6>
+          <ul class="list-unstyled">
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                      <img src="../assets/images/icons/codeOfConduct.png" alt="">
+                    </span>
+                    Code of Conduct
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link  px-2 py-1">
+                    <span>
+                      <img src="../assets/images/icons/PrivacyPolicy.png" alt="">
+                    </span>
+                    Privacy Policy
+                </a>
+            </li>
+            <li class="mb-2">
+                <a href="#" class="text-decoration-none side__menu-link px-2 py-1">
+                    <span>
+                      <img src="../assets/images/icons/termOfUse.png" alt="">
+                    </span>
+                    Terms of use
+                </a>
+            </li>
+          </ul>
+          <div class="d-flex justify-start mb-4">
+            <a href="#" class="me-2 social-media__link">
+              <img src="../assets/images/icons/twitter.png" alt="">
+            </a>
+            <a href="#" class="me-2 social-media__link">
+              <img src="../assets/images/icons/facebook.png" alt="">
+            </a>
+            <a href="#" class="me-2 social-media__link">
+              <img src="../assets/images/icons/github.png" alt="">
+            </a>
+            <a href="#" class="me-2 social-media__link">
+              <img src="../assets/images/icons/instagram.png" alt="">
+            </a>
+            <a href="#" class="me-2 social-media__link">
+              <img src="../assets/images/icons/twitch.png" alt="">
+            </a>
+            <a href="#" class="me-2 social-media__link">
+              <img src="../assets/images/icons/mastodon.png" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
       <section class="d-flex justify-content-center vw-100">
         <section
